# kylin-guard-agent

./: .env.example  .gitignore  AGENTS.md  CURRENT_STATUS.md  PLANS.md  PROJECT_SPEC.md  README.md  alembic.ini  pyproject.toml  yaoqiu.md  编写依据.md
backend/: __init__.py
backend/alembic/: env.py
backend/app/: cli.py  main.py
backend/tests/: conftest.py  test_agent.py  test_agent_rca_integration.py  test_agent_trace_persistence.py  test_api.py  test_security.py  (+23 more)
config/: app.example.yaml  demo.example.yaml  policy.example.yaml  tools.example.yaml
demo/: README.md
deploy/: CONTROLLED_EXECUTION.md  README.md  build-constraints.txt  healthcheck.sh  install.sh  kylin-guard-exec.service  kylin-guard.service  kylin-guard.sudoers  kylin_guard_privileged.py  nginx-kylin-default.conf  nginx.conf  requirements.txt  uninstall.sh
docs/: 01-软件功能需求分析.md  02-软件功能设计.md  07-接口文档.md  08-安全设计说明.md  09-比赛评分点映射.md  10-演示脚本.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
mcp_server/: __init__.py  providers.py  registry.py  server.py
prompts/: 00-启动与规划.md  01-工程骨架与后端基础.md  02-MCP与只读系统感知.md  03-安全护栏审批与受限执行框架.md  04-LLMProvider与Agent编排.md  05-根因分析与知识库.md  06-受控写操作验证与回滚.md  07-前端产品化.md  08-预测巡检配置漂移与审计增强.md  09-麒麟部署测试与性能.md  10-比赛材料演示与发布冻结.md  专项审查Prompt.md
scripts/: __init__.py  completion_audit.py  deepseek_plan_smoke.py  deepseek_smoke.py  demo_execution_smoke.py  demo_stability_smoke.py  performance_smoke.py  platform_probe.py  release_audit.py  security_scan.py  target_controlled_execution_smoke.py  target_performance_smoke.py  validate_phase0.py
(+96 files in other folders)
