[project]
name = "kylin-guard-agent"
version = "0.1.0"
description = "KylinGuard Agent backend foundation"
requires-python = ">=3.10,<3.14"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "mcp>=1.28,<1.29",
  "pydantic>=2.11,<2.12",
  "pydantic-settings>=2.10,<2.11",
  "rpds-py>=0.27.1,<0.28",
  "PyYAML>=6,<7",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.32,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.8,<1",
  "types-PyYAML>=6,<7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests", "mcp_server/tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["backend/alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101", "B008", "E501"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["backend/alembic/versions"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = false

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
